# git-stats

./: .gitignore  Cargo.toml  README.md  main.py
git_stats/: __init__.py  raw_parsing.py
src/: lib.rs  macros.rs  main.rs  objects.rs  packfiles.rs  raw_parsing.rs  repo.rs
src/cli/: cli.rs
src/objects/: blob.rs  commit.rs  mod.rs  tree.rs
src/server/: mod.rs
static/: index.css  index.html  index.js
