[package]
name = "git-stats"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.84"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "string"] }
colored = "2.1.0"
flate2 = "1.0.30"
hex = "0.4.3"
log = "0.4.21"
miniz_oxide = "0.7.2"
regex = "1.10.4"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sha1_smol = "1.0.0"
simple_logger = "5.0.0"
